[gd_scene load_steps=3 format=2]

[ext_resource path="res://system/debug/file_editor/editor.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 20.0

[node name="FileButton" type="MenuButton" parent="Panel/VBoxContainer/HBoxContainer"]
margin_right = 92.0
margin_bottom = 20.0
toggle_mode = true
text = "EDITOR_FILE"

[node name="HelpButton" type="MenuButton" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 96.0
margin_right = 194.0
margin_bottom = 20.0
toggle_mode = true
text = "EDITOR_HELP"

[node name="TabContainer" type="TabContainer" parent="Panel/VBoxContainer"]
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 566.0
size_flags_vertical = 3
drag_to_rearrange_enabled = true

[node name="StatusBar" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 570.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 100, 30 )

[node name="ValidationStatusLabel" type="Label" parent="Panel/VBoxContainer/StatusBar"]
margin_top = 8.0
margin_right = 81.0
margin_bottom = 22.0
text = "Code is valid"

[node name="NewFileDialog" type="WindowDialog" parent="."]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -89.0
margin_top = -14.0
margin_right = 225.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3
popup_exclusive = true

[node name="HBoxContainer" type="HBoxContainer" parent="NewFileDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="OptionButton" type="OptionButton" parent="NewFileDialog/HBoxContainer"]
margin_left = 108.0
margin_right = 149.0
margin_bottom = 28.0

[node name="NewFileButton" type="Button" parent="NewFileDialog/HBoxContainer"]
margin_left = 153.0
margin_right = 206.0
margin_bottom = 28.0
text = "Nuevo"

[node name="AboutDialog" type="AcceptDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -242.0
margin_top = -111.0
margin_right = 242.0
margin_bottom = 111.0
window_title = "EDITOR_ABOUT"

[node name="MarginContainer" type="MarginContainer" parent="AboutDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="AboutDialog/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 458.0
margin_bottom = 180.0

[node name="HBoxContainer" type="HBoxContainer" parent="AboutDialog/MarginContainer/VBoxContainer"]
editor/display_folded = true
margin_right = 448.0
margin_bottom = 152.0
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="AboutDialog/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 148.0
margin_bottom = 152.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
texture = ExtResource( 2 )
expand = true
stretch_mode = 4

[node name="Label" type="Label" parent="AboutDialog/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 152.0
margin_top = 69.0
margin_right = 448.0
margin_bottom = 83.0
size_flags_horizontal = 3
text = "EDITOR_ABOUT_TEXT"
align = 1
valign = 1
autowrap = true

[node name="HBoxContainer2" type="HBoxContainer" parent="AboutDialog/MarginContainer/VBoxContainer"]
margin_top = 156.0
margin_right = 448.0
margin_bottom = 170.0
alignment = 1

[node name="SourceCodeButton" type="LinkButton" parent="AboutDialog/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 150.0
margin_right = 297.0
margin_bottom = 14.0
text = "EDITOR_SOURCE_CODE"

